test/files/neg/val_sig_infer_struct.check
val_sig_infer_struct.scala:7: error: value foo is not a member of Object
  def bar = f.foo
              ^
1 error
